refactor: comprehensive codebase upgrade and polish (v1.0.0)
Build infrastructure:
- Modernized build.gradle with proper manifest, POM metadata, and compiler lint flags
- Tuned gradle.properties with G1GC, build caching, and organized sections
- Improved .gitignore with comprehensive, categorized patterns

Java source (all 12 files rewritten/upgraded):
- Downloader: replaced legacy HttpURLConnection with java.net.http.HttpClient
  (automatic cross-host/protocol redirect handling, cleaner resource management)
- ConduitConfig: fixed JSON parser split bug (old regex failed on last field
  without trailing comma), switched to text block serialization
- PlayitAgentManager/GeyserManager: replaced ConcurrentLinkedDeque with
  CopyOnWriteArrayList for O(1) subList-based log tail instead of O(n) counter
  iteration; use virtual threads for output pumping
- PlatformBinary: extracted architecture helpers, added macOS detection method
- PlayitTunnel: added proper toString() for debugging
- ConduitClient: eliminated duplicate widget iteration loop in distance locking,
  simplified button injection
- ConduitController: restructured async chain for clarity, fixed bedrock address
  format (removed stale 'bedrock://' prefix)
- AdminPanelScreen: extracted layout constants, separated render methods per tab,
  improved IntSlider with currentValue() helper
- HostWorldScreen: wrapped async callbacks in minecraft.execute() for thread safety
- ServerBridge: added null/blank guard on say(), extracted requireServer() helper,
  return unmodifiable list from listPlayers()
- ServerEntryManager: improved javadoc and null-safety

Build script (build.py):
- Added download progress bar with MB/percentage display
- Added tarfile.data_filter safety for Python >= 3.12
- Added platform/Python info logging on startup
- Improved CLI help with examples in epilog
- Added success() color helper for positive messages

Other:
- Rewrote README.md from scratch with cleaner structure and tables
- Updated fabric.